--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,6 +103,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
+    // Confetti
+    implementation 'nl.dionsegijn:konfetti-compose:2.0.2'
 
 
 }
